--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.1.10",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "font-awesome": "^4.7.0"
     }
 }
