--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
-        "nunomaduro/essentials": "@dev"
+        "nunomaduro/essentials": "^0.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
