--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "ion-rangeslider": "^2.3.1",
+        "jquery": "^3.7.1"
     }
 }
