--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "nunomaduro/essentials": "^0.1"
     },
     "require-dev": {
+        "agencetwogether/hookshelper": "^0.0.2",
         "barryvdh/laravel-debugbar": "^3.15",
         "barryvdh/laravel-ide-helper": "^3.5",
         "driftingly/rector-laravel": "^2.0",
