--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
-        "nunomaduro/essentials": "^0.1"
+        "nunomaduro/essentials": "^0.1",
+        "spatie/laravel-permission": "^6.20"
     },
     "require-dev": {
         "agencetwogether/hookshelper": "^0.0.2",
