--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "pestphp/pest-plugin-faker": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.2",
         "pestphp/pest-plugin-livewire": "^3.0",
+        "phpseclib/phpseclib": "~3.0",
         "rector/rector": "*"
     },
     "autoload": {
