--- a/composer.json
+++ b/composer.json
@@ -9,31 +9,34 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "filament/filament": "^4.0",
+        "php": "^8.3",
+        "filament/filament": "^5.0",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6",
+        "livewire/livewire": "^4.0",
         "nunomaduro/essentials": "^0.1",
         "spatie/laravel-permission": "^6.20"
     },
     "require-dev": {
-        "agencetwogether/hookshelper": "^0.0.2",
-        "barryvdh/laravel-debugbar": "^3.15",
-        "barryvdh/laravel-ide-helper": "^3.5",
-        "driftingly/rector-laravel": "^2.0",
-        "fakerphp/faker": "^1.23",
-        "laravel/pail": "^1.2.2",
-        "laravel/pint": "^1.22",
-        "laravel/sail": "^1.41",
-        "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.6",
-        "pestphp/pest": "^3.8",
-        "pestphp/pest-plugin-faker": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.2",
-        "pestphp/pest-plugin-livewire": "^3.0",
-        "phpseclib/phpseclib": "~3.0",
+        "agencetwogether/hookshelper": "*",
+        "barryvdh/laravel-debugbar": "*",
+        "barryvdh/laravel-ide-helper": "*",
+        "driftingly/rector-laravel": "*",
+        "fakerphp/faker": "*",
+        "filament/blueprint": "*",
+        "filament/upgrade": "^5.0",
+        "laravel/boost": "*",
+        "laravel/pail": "*",
+        "laravel/pint": "*",
+        "laravel/sail": "*",
+        "mockery/mockery": "*",
+        "nunomaduro/collision": "*",
+        "pestphp/pest": "*",
+        "pestphp/pest-plugin-faker": "*",
+        "pestphp/pest-plugin-laravel": "*",
+        "pestphp/pest-plugin-livewire": "*",
+        "phpseclib/phpseclib": "*",
         "rector/rector": "*"
     },
     "autoload": {
@@ -98,5 +101,12 @@
         }
     },
     "minimum-stability": "beta",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "name": "filament",
+            "type": "composer",
+            "url": "https://packages.filamentphp.com/composer"
+        }
+    ]
 }
